--- a/style.css
+++ b/style.css
@@ -2059,9 +2059,10 @@ select.ht__select {
     font-family: sans-serif;
 }
 select.select__size {
-    border: 1px solid #000000;
+    /* border: 1px solid #000000; */
+    box-shadow: 1px 1px 3px black;
     color: #000000;
-    height: 20px;
+    /* height: 20px; */
     margin-left: 10px;
     width: 60px;
     padding: 0 4px;
